--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="accept_terms">Elfogadom az ÁSZF-t</string>
     <string name="decline_terms">Nem fogdom el az ÁSZF-t</string>
     <string name="postal_code">Irányítószám</string>
+    <string name="logout">Kijelentkezés</string>
+
     <string-array name="phone_modes">
         <item>Otthoni</item>
         <item>Munkahelyi</item>
